# UK_EV_Takeup_Data_Pipeline

./: .env.example  .gitignore  Makefile  README.md  README_sp500.md  TODO.md  docker-compose.yml  explo.py  final_selection.py  layout.py  pipeline.md  playground.py  pyproject.toml
Datasets/: .~lock.dataset_key.ods#  dataset_key.ods
Datasets/raw_DESNZ/: .~lock.electricitypricesdataset181225.xlsx#  .~lock.table_411_413__6_.xlsx#  Bank of England Database.csv
Datasets/raw_DVLA/: .~lock.veh0105.ods#  .~lock.veh1103.ods#  veh1103.ods  veh1111.ods
dbt/uk_ev_takeup/: dbt_project.yml
docker/kestra/: Dockerfile
explo/: explo.py  final_selection.py  layout.py  table_info.txt
explo/datasets/: .~lock.dataset_key.ods#  dataset_key.ods
ingestion/: bank_of_england_eur_gbp_fx.py  desnz_petroleum_products_prices.py  dvla_veh1103.py  dvla_veh1153.py  european_wholesale_electricity_prices.py
ingestion/bigquery/: load_raw_bank_of_england_eur_gbp_fx.py  load_raw_desnz_petroleum_products_prices.py  load_raw_dvla_veh1103.py  load_raw_dvla_veh1153.py  load_raw_european_wholesale_electricity_prices.py
kestra/flows/: batch_uk_ev_pipeline.yml  ingest_bank_of_england_eur_gbp_fx.yml  ingest_desnz_petroleum_products_prices.yml  ingest_dvla_veh1103.yml  ingest_dvla_veh1153.yml  ingest_european_wholesale_electricity_prices.yml  smoke_test_repo_access.yml
scripts/: deploy_kestra_flows.sh
streamlit/: app.py
streamlit/.streamlit/: config.toml
terraform/: bigquery.tf  compute.tf  firewall.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
(+26 files in other folders)
